--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/panton-rust-heavy');
+@import url('https://fonts.googleapis.com/css2?family=Passero+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {}
+body {
+  background: #0F0906;
+  font-family: 'Panton Rust Heavy', sans-serif;
+  font-family: "Passero One", sans-serif;
+}
 
 
 
